# rexiv2

./: .gitignore  .gitlab-ci.yml  .rustfmt.toml  .travis.yml  CHANGELOG  CHANGELOG.md  CONTRIBUTING.md  CONTRIBUTORS.md  Cargo.toml  Makefile  README.md  SETUP.md
.circleci/: config.yml
.github/workflows/: ci.yml
.reuse/: dep5
examples/: gps.rs  timestamp.rs
src/: gexiv2.rs  lib.rs
tst/: main.rs  sample.HEIC
